<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/temperature_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:clipToPadding="false"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/temperature_icon_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/appMainColorDark"
                        android:elevation="5dp"
                        tools:layout_editor_absoluteX="5dp"
                        tools:layout_editor_absoluteY="5dp" />
                    <ImageView
                        android:id="@+id/temperature_icon"
                        android:src="@mipmap/temperature_icon_white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-30dp"
                        android:elevation="5dp"
                        android:text="@string/temperature"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/temperature_icon_bg" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bpm_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:clipToPadding="false"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/cardio_icon_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/appMainColorDark"
                        android:elevation="5dp"
                        tools:layout_editor_absoluteX="5dp"
                        tools:layout_editor_absoluteY="5dp" />
                    <ImageView
                        android:id="@+id/cardio_icon"
                        android:src="@mipmap/bpm_icon_white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-30dp"
                        android:elevation="5dp"
                        android:text="@string/bpm"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardio_icon_bg" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/trembling_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:clipToPadding="false"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/stress_icon_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/appMainColorDark"
                        android:elevation="5dp"
                        tools:layout_editor_absoluteX="5dp"
                        tools:layout_editor_absoluteY="5dp" />
                    <ImageView
                        android:id="@+id/iconHolder"
                        android:src="@mipmap/trembling_icon_white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-30dp"
                        android:elevation="5dp"
                        android:text="@string/trembling"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/stress_icon_bg" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/blood_pressure_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:clipToPadding="false"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/blood_pressure_icon_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/appMainColorDark"
                        android:elevation="5dp"
                        tools:layout_editor_absoluteX="5dp"
                        tools:layout_editor_absoluteY="5dp" />
                    <ImageView
                        android:id="@+id/blood_pressure_icon"
                        android:src="@mipmap/blood_pressure_icon_white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-30dp"
                        android:elevation="5dp"
                        android:text="@string/bloodPressure"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/blood_pressure_icon_bg" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/weight_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:clipToPadding="false"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/scale_icon_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/appMainColorDark"
                        android:elevation="5dp"
                        tools:layout_editor_absoluteX="5dp"
                        tools:layout_editor_absoluteY="5dp" />
                    <ImageView
                        android:id="@+id/scale_icon"
                        android:src="@mipmap/weight_icon_white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-30dp"
                        android:elevation="5dp"
                        android:text="@string/weight"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/scale_icon_bg" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/glucose_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:padding="5dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/glucometer_icon_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/appMainColorDark"
                        android:elevation="5dp"
                        tools:layout_editor_absoluteX="5dp"
                        tools:layout_editor_absoluteY="5dp" />
                    <ImageView
                        android:id="@+id/glucometer_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp"
                        android:src="@mipmap/glucose_icon_white" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-30dp"
                        android:elevation="5dp"
                        android:text="@string/glucose"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/glucometer_icon_bg" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <Button
                    android:id="@+id/closeBoxBtn"
                    android:backgroundTint="@color/textAlertColor"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/closeBox"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

</ScrollView>